<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- TOP BAR -->
    <!-- DO NOT CHANGE ANYTHING -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:background="@color/topBarColor" >

        <!-- TEXT FOR TOP BAR -->

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/topBarColor"
            android:text="@string/result"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/topTextColor" />
    </RelativeLayout>

    <!-- MIDDLE PANEL -->

    <LinearLayout
        android:id="@+id/homeMiddlePane"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/noResultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/noResult"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/noResultLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/startLocationEditView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:hint="@string/startlocation" />

            <EditText
                android:id="@+id/destinationEditView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/startLocationEditView"
                android:ems="10"
                android:hint="@string/destination" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noofseats"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/SeatsEditView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/departeDateEditView"
                    android:layout_toRightOf="@+id/textView1"
                    android:ems="5"
                    android:hint="@string/available"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/departdate"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/selectDateBttn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showDatePickerDialog"
                    android:text="@string/selectdate" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/postingas"
                    android:textSize="20sp" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/driverRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/driver" />

                    <RadioButton
                        android:id="@+id/riderRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/passenger" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/editText1"
                    android:layout_alignBottom="@+id/editText1"
                    android:layout_alignParentLeft="true"
                    android:text="$"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/fareEditView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/departeDateEditView"
                    android:layout_toRightOf="@+id/textView1"
                    android:ems="5"
                    android:hint="@string/fare"
                    android:inputType="number" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sortLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="#FFFFFF"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/sortByDateBttn"
                style="@style/menuButtonStyle"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight=".33"
                android:background="#000000"
                android:text="@string/date" />

            <TextView
                android:id="@+id/sortByFareBttn"
                style="@style/menuButtonStyle"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="1dp"
                android:layout_weight=".33"
                android:background="#000000"
                android:text="@string/fare" />

            <TextView
                android:id="@+id/sortByRatingBttn"
                style="@style/menuButtonStyle"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_weight=".33"
                android:background="#000000"
                android:text="@string/rating" />

            <TextView
                android:id="@+id/sortBySeatsBttn"
                style="@style/menuButtonStyle"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight=".25"
                android:background="#000000"
                android:text="@string/seats"
                android:visibility="gone" />
        </LinearLayout>

        <ListView
            android:id="@+id/notificationList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
        </ListView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/backBttn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/postBttn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/post" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>