<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- TOP BAR -->
    <!-- DO NOT CHANGE ANYTHING -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:background="@color/topBarColor" >

        <!-- TEXT FOR TOP BAR -->

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/topBarColor"
            android:text="@string/ride"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/topTextColor" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/startLocationEditView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:hint="@string/startlocation" />

            <EditText
                android:id="@+id/destinationEditView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/startLocationEditView"
                android:ems="10"
                android:hint="@string/destination" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noofseats"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/SeatsEditView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/departeDateEditView"
                    android:layout_toRightOf="@+id/textView1"
                    android:ems="5"
                    android:hint="@string/available"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/departdate"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/selectDateBttn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showDatePickerDialog"
                    android:text="@string/selectdate" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/lookingfor"
                    android:textSize="20sp" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/driverRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/driver" />

                    <RadioButton
                        android:id="@+id/riderRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/passenger" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/editText1"
                    android:layout_alignBottom="@+id/editText1"
                    android:layout_alignParentLeft="true"
                    android:text="$"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/fareEditView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/departeDateEditView"
                    android:layout_toRightOf="@+id/textView1"
                    android:ems="5"
                    android:hint="@string/fare"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/postBttn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:text="@string/post" />

                <Button
                    android:id="@+id/searchBttn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="@string/search" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <!-- MIDDLE PANEL END -->


    <!-- MENU BAR -->
    <!-- DO NOT CHANGE ANYTHING -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:background="#000000"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/homeMenu"
            style="@style/menuButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-7dp"
            android:layout_marginLeft="-7dp"
            android:layout_marginTop="-5dp"
            android:layout_weight=".50"
            android:text="@string/home" />

        <Button
            android:id="@+id/searchMenu"
            style="@style/menuButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-7dp"
            android:layout_marginLeft="-7dp"
            android:layout_marginRight="-7dp"
            android:layout_marginTop="-5dp"
            android:layout_weight=".50"
            android:text="@string/ride" />
    </LinearLayout>

</LinearLayout>