<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/signinbackground"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/signInView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/signInTextColor"
        android:textSize="40sp" />
    <!-- This linearLayout is used for username field and password name field -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-10dp"
        android:layout_weight="0.2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/loginErrorMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text=""
            android:textColor="@color/textErrorColor" />

        <EditText
            android:id="@+id/userNameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ellipsize="start"
            android:ems="10"
            android:hint="@string/usernameField"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passWordField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="start"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/registerBttn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/registerLink" />

            <Button
                android:id="@+id/signInBttn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/signIn" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>